Fixed - SearchUserDetails - default Userimgpath, Added check of ProfilePhotoReUpload for Validation on Create, Update and Edit User Profile screens , associated js files

--- a/Pages/EditSettings.cshtml
+++ b/Pages/EditSettings.cshtml
@@ -58,7 +58,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-id-badge"></i></span>
                                 </div>
-                                <input type="text" asp-for="SettingsData.SettingId" class="form-control" disabled />
+                                <input type="text" asp-for="SettingsData.SettingId" class="form-control" readonly />
                             </div>
                             <span asp-validation-for="SettingsData.SettingId" class="text-danger fw-bold"></span>
                         </div>
