--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -2,33 +2,35 @@
 <html lang="en">
 <head>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" asp-append-version="true">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="~/plugins/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="~/plugins/ionicons/css/ionicons.min.css" asp-append-version="true">
     <!-- Tempusdominus Bootstrap 4 -->
-    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" asp-append-version="true">
     <!-- iCheck -->
-    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css" asp-append-version="true">
     <!-- JQVMap -->
-    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
+    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css" asp-append-version="true" asp-append-version="true">
     <!-- Theme style -->
-    <link rel="stylesheet" href="~/dist/css/spideremt.min.css">
+    <link rel="stylesheet" href="~/dist/css/spideremt.min.css" asp-append-version="true" asp-append-version="true">
     <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css" asp-append-version="true" asp-append-version="true">
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css" asp-append-version="true" asp-append-version="true">
     <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css" asp-append-version="true" asp-append-version="true">
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Spider_EMT.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/bootstrap-datepicker.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/toastr.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/leaflet/leaflet.css" asp-append-version="true" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Spider_EMT</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Spider_EMT.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/bootstrap-datepicker.min.css" />
-    <link rel="stylesheet" href="~/css/toastr.min.css" />
-    <link rel="stylesheet" href="~/lib/leaflet/leaflet.css" />
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
@@ -36,7 +38,7 @@
 
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="dist/img/Spider_Logo.jpg" alt="SpiderEMTLogo" height="60" width="60">
+        <img class="animation__shake" src="dist/img/Spider_Logo.jpg" alt="SpiderEMTLogo" height="60" width="60">
         </div> *@
 
         @* @await Html.PartialAsync("_HeaderPartial") *@
@@ -202,7 +204,7 @@
                                     <a href="/">Home</a>
                                 </li>
                                 <li class="breadcrumb-item active">
-                                    @if (string.Compare(TempData["NavigationalPageName"] as string,"Dashboard") != 0)
+                                    @if (string.Compare(TempData["NavigationalPageName"] as string, "Dashboard") != 0)
                                     {
                                         @TempData["NavigationalPageName"]
                                     }
@@ -229,10 +231,10 @@
             </section>
             <!-- /.content -->
         </div>
-        
+
         @* @await Html.PartialAsync("_FooterPartial") *@
         <footer class="main-footer">
-            
+
             <strong>Copyright &copy; <span id="copyright-year"></span> <a href="#">Site Selection</a>. </strong> All rights reserved. <div class="float-right d-none d-sm-inline-block">
                 <!--<b>Version</b> 3.2.0-->
             </div>
@@ -247,50 +249,50 @@
     </div>
 
     <!-- jQuery -->
-    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <script src="~/plugins/jquery/jquery.min.js" asp-append-version="true"></script>
     <!-- jQuery UI 1.11.4 -->
-    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="~/plugins/jquery-ui/jquery-ui.min.js" asp-append-version="true"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
-    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <!-- ChartJS -->
-    <script src="~/plugins/chart.js/Chart.min.js"></script>
+    <script src="~/plugins/chart.js/Chart.min.js" asp-append-version="true"></script>
     <!-- Sparkline -->
-    <script src="~/plugins/sparklines/sparkline.js"></script>
+    <script src="~/plugins/sparklines/sparkline.js" asp-append-version="true"></script>
     <!-- JQVMap -->
-    <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="~/plugins/jqvmap/jquery.vmap.min.js" asp-append-version="true"></script>
+    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js" asp-append-version="true"></script>
     <!-- jQuery Knob Chart -->
-    <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="~/plugins/jquery-knob/jquery.knob.min.js" asp-append-version="true"></script>
     <!-- daterangepicker -->
-    <script src="~/plugins/moment/moment.min.js"></script>
-    <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="~/plugins/moment/moment.min.js" asp-append-version="true"></script>
+    <script src="~/plugins/daterangepicker/daterangepicker.js" asp-append-version="true"></script>
     <!-- Tempusdominus Bootstrap 4 -->
-    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js" asp-append-version="true"></script>
     <!-- Summernote -->
-    <script src="~/plugins/summernote/summernote-bs4.min.js"></script>
+    <script src="~/plugins/summernote/summernote-bs4.min.js" asp-append-version="true"></script>
     <!-- overlayScrollbars -->
-    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js" asp-append-version="true"></script>
     <!-- SpiderWeb App -->
-    <script src="~/dist/js/spideremt.js"></script>
+    <script src="~/dist/js/spideremt.js" asp-append-version="true"></script>
     <!-- SpiderWeb for demo purposes -->
-    <script src="~/dist/js/demo.js"></script>
+    <script src="~/dist/js/demo.js" asp-append-version="true"></script>
     <!-- Side Left Panel Features -->
     <script src="~/js/side-left-panel.js" asp-append-version="true"></script>
-    <script src="~/js/toastr.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/toastr.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/bootstrap-datepicker.min.js"></script>
-    <script src="~/js/chart/highcharts.js"></script>
-    <script src="~/js/chart/exporting.js"></script>
-    <script src="~/js/chart/drilldown.js"></script>
-    <script src="~/js/chart/highcharts-3d.js"></script>
-    <script src="~/js/chart/highcharts-more.js"></script>
-    <script src="~/lib/leaflet/leaflet.js"></script>
+    <script src="~/js/bootstrap-datepicker.min.js" asp-append-version="true"></script>
+    <script src="~/js/chart/highcharts.js" asp-append-version="true"></script>
+    <script src="~/js/chart/exporting.js" asp-append-version="true"></script>
+    <script src="~/js/chart/drilldown.js" asp-append-version="true"></script>
+    <script src="~/js/chart/highcharts-3d.js" asp-append-version="true"></script>
+    <script src="~/js/chart/highcharts-more.js" asp-append-version="true"></script>
+    <script src="~/lib/leaflet/leaflet.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     @await Html.PartialAsync("_Notification")
 </body>
