01 - Web Security Under the Hood for Web Applications 02 - Secure Web APIs

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -89,6 +89,10 @@
                         <i class="fas fa-th-large"></i>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <partial name="_LoginStatusPartial" />
+                </li>
             </ul>
         </nav>
         <!-- /.navbar -->
