Implemented Identity, Authentication and External OAuth - Facebook and Google, MFA Setup, DB Migration Changes

--- a/Pages/Chart.cshtml
+++ b/Pages/Chart.cshtml
@@ -88,5 +88,10 @@
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/chart/highcharts.js" asp-append-version="true"></script>
+    <script src="~/js/chart/exporting.js" asp-append-version="true"></script>
+    <script src="~/js/chart/drilldown.js" asp-append-version="true"></script>
+    <script src="~/js/chart/highcharts-3d.js" asp-append-version="true"></script>
+    <script src="~/js/chart/highcharts-more.js" asp-append-version="true"></script>
     <script src="~/js/transactionChart.js" asp-append-version="true"></script>
 }
