--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -13,6 +13,12 @@ html {
     min-height: 100%;
 }
 
+.login-page .main-sidebar,
+.login-page .main-footer,
+.login-page .navbar {
+    display: none;
+}
+
 .scrollableProfile {
     max-height: 200px;
     overflow-y: auto;
