Major Changes on Account Screens, IdentityRole<int> Structural Changes, Addition of ICurrentUserService class usage, SP and LINQ Updates as per IdentityRole<int> and CurrentUserService

--- a/Pages/Account/ConfirmEmail.cshtml
+++ b/Pages/Account/ConfirmEmail.cshtml
@@ -5,6 +5,39 @@
     TempData["NavigationalPageName"] = "Email Confirmation";
 }
 
-<p>
-    @Model.Message
-</p>
+<div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
+    <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+                <div class="row pb-1 pt-2">
+                <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Email Confirmation</div>
+                    <div>
+                        <hr />
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-title fw-bold">Email Confirmation</div>
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                <i class="fas fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <!-- Validation Summary -->
+                        <div asp-validation-summary="All" class="text-danger fw-bold"></div>
+
+                        <div class="mb-3">
+                            <p>
+                                @Model.Message
+                            </p>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
