--- a/Pages/Account/LoginTwoFactorWithAuthenticator.cshtml
+++ b/Pages/Account/LoginTwoFactorWithAuthenticator.cshtml
@@ -7,7 +7,7 @@
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post">
-        <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:60%;">
+        <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
                     <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Two Factor Login</div>
