--- a/Pages/UpdateUserProfile.cshtml
+++ b/Pages/UpdateUserProfile.cshtml
@@ -161,7 +161,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                     </div>
-                                    <input type="email" asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control"/>
+                                    <input type="email" asp-for="ProfileUsersData.Email" placeholder="Email Address" class="form-control" readonly/>
                                 </div>
                                 <span asp-validation-for="ProfileUsersData.Email" class="text-danger fw-bold"></span>
                             </div>
