Added Authorise, Add dynamic policy-based auth, caching, and access denial handling

--- a/Pages/Account/AccessDenied.cshtml
+++ b/Pages/Account/AccessDenied.cshtml
@@ -7,5 +7,5 @@
 
 <div>
     <h6>Access Denied</h6>
-    <p>You dont have access to the page you are looking for.</p>
+    <p>You do not have permission to access the page: @ViewData["ReturnUrl"]</p>
 </div>
