--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @namespace Spider_EMT.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Spider_EMT
+@inject Spider_EMT.Repository.Skeleton.ICurrentUserService _currentUserService
