--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,12 +32,14 @@
 
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-    @if (ViewData["Title"] == "Login" || ViewData["Title"] == "Two Factor Authenticator" || ViewData["Title"] == "Logout" || ViewData["Title"] == "Email Confirmation" || ViewData["Title"] == "MFA Setup" || ViewData["Title"] == "Register User" || ViewData["Title"] == "User Verification Setup")
+    @if (ViewData["Title"] == "" || ViewData["Title"] == "Login" || ViewData["Title"] == "Two Factor Authenticator" || ViewData["Title"] == "Logout" || ViewData["Title"] == "Email Confirmation" || ViewData["Title"] == "MFA Setup" || ViewData["Title"] == "Register User" || ViewData["Title"] == "User Verification Setup" || ViewData["Title"] == "User Role Assignment" || ViewData["Title"] == "Access Denied")
     {
         <partial name="_LoginStatusPartial" />
-        @await Html.PartialAsync("_GetToken")
+        
         <!-- Render only the body content for specific pages -->
         @RenderBody()
+
+        @await Html.PartialAsync("_GetToken")
 
         <!-- Scripts -->
         <!-- jQuery -->
