--- a/Pages/Shared/_GetToken.cshtml
+++ b/Pages/Shared/_GetToken.cshtml
@@ -3,7 +3,11 @@
 @functions{
     public string GetTokenC(HttpContext context)
     {
-        // Retrieve the tokenC value (e.g., from a service or session)
+        if (context == null)
+        {
+            return null;
+        }
+        // Retrieve the tokenC value from session
         return JWTCookieHelper.GetJWTCookie(context);
     }
 }
@@ -12,5 +16,7 @@
     var tokenC = GetTokenC(HttpContextAccessor.HttpContext);
 }
 <script>
-    window.tokenC = '@tokenC';
+    document.addEventListener("DOMContentLoaded", function () {
+        window.tokenC = '@tokenC';
+    });
 </script>
