--- a/Pages/Account/ForgotPassword.cshtml
+++ b/Pages/Account/ForgotPassword.cshtml
@@ -1,23 +1,23 @@
 ﻿@page
-@model Spider_EMT.Pages.Account.LoginTwoFactorWithAuthenticatorModel
+@model Spider_EMT.Pages.Account.ForgotPasswordModel
 @{
-    ViewData["Title"] = "Two Factor Authenticator";
-    TempData["NavigationalPageName"] = "Two Factor Authenticator";
+    ViewData["Title"] = "User Verification Setup";
+    TempData["NavigationalPageName"] = "Create User";
 }
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <form method="post">
-        <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
-            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+    <form method="post" enctype="multipart/form-data" id="userVerificationForm">
+        <div id="userVerificationSection" class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
+            <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Two Factor Login</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem; font-weight:500">Forgot Password</div>
                     <div>
                         <hr />
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title fw-bold">Two Factor Login</div>
+                        <div class="card-title fw-bold" style="font-size:1.2rem">Forgot Password</div>
                         <div class="card-tools">
                             <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                 <i class="fas fa-minus"></i>
@@ -29,17 +29,17 @@
                     </div>
                     <div class="card-body">
                         <!-- Validation Summary -->
-                        <div asp-validation-summary="All" class="text-danger fw-bold"></div>
+                        <div asp-validation-summary="ModelOnly" class="text-danger fw-bold"></div>
 
                         <div class="mb-3">
-                            <label asp-for="AuthenticatorMFAData.SecurityCode" class="form-label" style=""></label>
+                            <label asp-for="Email" class="form-label"></label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-atom"></i></span>
                                 </div>
-                                <input type="text" asp-for="AuthenticatorMFAData.SecurityCode" placeholder="Please enter the security code from your authenticator" class="form-control" />
+                                <input type="email" asp-for="Email" autocomplete="username" class="form-control" />
                             </div>
-                            <span asp-validation-for="AuthenticatorMFAData.SecurityCode" class="text-danger fw-bold"></span>
+                            <span asp-validation-for="Email" class="text-danger fw-bold"></span>
                         </div>
 
                         <!-- Buttons for form submission -->
@@ -47,10 +47,10 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" class="btn create-btn" style="width:140px;">Verify</button>
+                                    <button type="submit" class="btn create-btn" style="width:140px;">Reset Password</button>
                                 </div>
                                 <div class="col-4 ms-3">
-                                    <input type="hidden" asp-for="AuthenticatorMFAData.RememberMe" />
+                                    <a asp-page="./Login" class="btn btn-secondary" style="width:140px;"> Back to Login</a>
                                 </div>
                                 <div class="col-3"></div>
                             </div>
@@ -61,6 +61,9 @@
         </div>
     </form>
 </div>
+
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+                        
