--- a/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,22 +1,24 @@
 ﻿@page
-@model Spider_EMT.Pages.Account.ConfirmEmailModel
+@model Spider_EMT.Pages.Account.ForgotPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Email Confirmation";
-    TempData["NavigationalPageName"] = "Email Confirmation";
+    ViewData["Title"] = "Forgot Password Confirmation";
+    TempData["NavigationalPageName"] = "Forgot Password Confirmation";
 }
 
+<h1>@ViewData["Title"]</h1>
+
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
-    <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
+        <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:45rem;">
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Email Confirmation</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Two Factor Login</div>
                     <div>
                         <hr />
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title fw-bold">Email Confirmation</div>
+                        <div class="card-title fw-bold">Two Factor Login</div>
                         <div class="card-tools">
                             <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                 <i class="fas fa-minus"></i>
@@ -29,13 +31,9 @@
                     <div class="card-body">
                         <!-- Validation Summary -->
                         <div asp-validation-summary="All" class="text-danger fw-bold"></div>
-
-                        <div class="mb-3">
-                            <p>
-                                @Model.Message
-                            </p>
-                        </div>
-                        
+                        <p>
+                            Please check your email to reset your password.
+                        </p>
                     </div>
                 </div>
             </div>
