--- a/Pages/Account/Logout.cshtml
+++ b/Pages/Account/Logout.cshtml
@@ -4,3 +4,6 @@
     ViewData["Title"] = "Logout";
     TempData["NavigationalPageName"] = "Logout";
 }
+@section scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
