--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-    @if (ViewData["Title"] == "" || ViewData["Title"] == "Login" || ViewData["Title"] == "Two Factor Authenticator" || ViewData["Title"] == "Logout" || ViewData["Title"] == "Email Confirmation" || ViewData["Title"] == "MFA Setup" || ViewData["Title"] == "Register User" || ViewData["Title"] == "User Verification Setup" || ViewData["Title"] == "User Role Assignment" || ViewData["Title"] == "Access Denied")
+    @if (ViewData["Title"] == "" || ViewData["Title"] == "Login" || ViewData["Title"] == "Two Factor Authenticator" || ViewData["Title"] == "Logout" || ViewData["Title"] == "Email Confirmation" || ViewData["Title"] == "MFA Setup" || ViewData["Title"] == "Register User" || ViewData["Title"] == "User Verification Setup" || ViewData["Title"] == "User Role Assignment" || ViewData["Title"] == "Access Denied" || ViewData["Title"] == "Forgot Password Confirmation" || ViewData["Title"] == "Chart Collection")
     {
         <partial name="_LoginStatusPartial" />
         
