--- a/Pages/Account/ChangePassword.cshtml
+++ b/Pages/Account/ChangePassword.cshtml
@@ -37,7 +37,12 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="ChangePasswordVMData.OldPassword" placeholder="Current Password" class="form-control" />
+                                <input type="password" asp-for="ChangePasswordVMData.OldPassword" placeholder="Current Password" class="form-control password-toggle-input" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
+                                </div>
                             </div>
                             <span asp-validation-for="ChangePasswordVMData.OldPassword" class="text-danger fw-bold"></span>
                         </div>
@@ -48,7 +53,12 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="ChangePasswordVMData.NewPassword" placeholder="New Password" class="form-control" />
+                                <input type="password" asp-for="ChangePasswordVMData.NewPassword" placeholder="New Password" class="form-control password-toggle-input" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
+                                </div>
                             </div>
                             <span asp-validation-for="ChangePasswordVMData.NewPassword" class="text-danger fw-bold"></span>
                         </div>
@@ -59,7 +69,12 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="ChangePasswordVMData.ConfirmPassword" placeholder="Confirm Password" class="form-control" />
+                                <input type="password" asp-for="ChangePasswordVMData.ConfirmPassword" placeholder="Confirm Password" class="form-control password-toggle-input" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
+                                </div>
                             </div>
                             <span asp-validation-for="ChangePasswordVMData.ConfirmPassword" class="text-danger fw-bold"></span>
                         </div>
