--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -56,7 +56,12 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="CredentialData.Password" placeholder="Password" class="form-control" />
+                                <input type="password" asp-for="CredentialData.Password" placeholder="Password" class="form-control password-toggle-input" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
+                                </div>
                             </div>
                             <span asp-validation-for="CredentialData.Password" class="text-danger fw-bold"></span>
                         </div>
