--- a/Pages/Account/ResetPassword.cshtml
+++ b/Pages/Account/ResetPassword.cshtml
@@ -50,7 +50,12 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fa fa-lock"></i></span>
                                     </div>
-                                    <input type="password" asp-for="Input.Password" autocomplete="new-password" placeholder="New Password" class="form-control" />
+                                    <input type="password" asp-for="Input.Password" autocomplete="new-password" placeholder="New Password" class="form-control password-toggle-input" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">
+                                            <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                        </span>
+                                    </div>
                                 </div>
                                 <span asp-validation-for="Input.Password" class="text-danger fw-bold"></span>
                             </div>
@@ -63,7 +68,12 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fa fa-lock"></i></span>
                                     </div>
-                                    <input type="password" asp-for="Input.ConfirmPassword" autocomplete="new-password" placeholder="Confirm New Password" class="form-control" />
+                                    <input type="password" asp-for="Input.ConfirmPassword" autocomplete="new-password" placeholder="Confirm New Password" class="form-control password-toggle-input" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">
+                                            <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                        </span>
+                                    </div>
                                 </div>
                                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger fw-bold"></span>
                             </div>
