--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -118,9 +118,11 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="ProfileUsersData.Password" placeholder="New Password" class="form-control" />
+                                <input type="password" asp-for="ProfileUsersData.Password" placeholder="New Password" class="form-control password-toggle-input" />
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fas fa-eye-slash" id="togglePasswordVisibility"></i></span>
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
                                 </div>
                             </div>
                             <span asp-validation-for="ProfileUsersData.Password" class="text-danger fw-bold"></span>
@@ -133,9 +135,11 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                 </div>
-                                <input type="password" asp-for="ProfileUsersData.ReTypePassword" placeholder="Retype New Password" class="form-control" />
+                                <input type="password" asp-for="ProfileUsersData.ReTypePassword" placeholder="Retype New Password" class="form-control password-toggle-input" />
                                 <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fas fa-eye-slash" id="toggleReTypePasswordVisibility"></i></span>
+                                    <span class="input-group-text">
+                                        <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                    </span>
                                 </div>
                             </div>
                             <span asp-validation-for="ProfileUsersData.ReTypePassword" class="text-danger fw-bold"></span>
