--- a/Pages/EditSettings.cshtml
+++ b/Pages/EditSettings.cshtml
@@ -107,9 +107,11 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     </div>
-                                    <input type="password" asp-for="SettingsData.Password" placeholder="New Password" class="form-control" />
+                                    <input type="password" asp-for="SettingsData.Password" placeholder="New Password" class="form-control password-toggle-input" />
                                     <div class="input-group-append">
-                                        <span class="input-group-text"><i class="fas fa-eye-slash" id="togglePasswordVisibility"></i></span>
+                                        <span class="input-group-text">
+                                            <i class="fas fa-eye-slash password-toggle-icon" data-toggle="password"></i>
+                                        </span>
                                     </div>
                                 </div>
                                 <span asp-validation-for="SettingsData.Password" class="text-danger fw-bold"></span>
